# serializer version: 1
# name: test_binary_sensors[entry-charging]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.lock_1a2b_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'tedee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12345-charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[entry-pullspring_enabled]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.lock_1a2b_pullspring_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pullspring enabled',
    'platform': 'tedee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pullspring_enabled',
    'unique_id': '12345-pullspring_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[entry-semi_locked]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.lock_1a2b_semi_locked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Semi locked',
    'platform': 'tedee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'semi_locked',
    'unique_id': '12345-semi_locked',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[state-charging]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'Lock-1A2B Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.lock_1a2b_charging',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[state-pullspring_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Lock-1A2B Pullspring enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.lock_1a2b_pullspring_enabled',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[state-semi_locked]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Lock-1A2B Semi locked',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.lock_1a2b_semi_locked',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---